--- a/ETL_Mini_Project_Group_4.ipynb
+++ b/ETL_Mini_Project_Group_4.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
        "4      False           theater/plays  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +196,7 @@
    "source": [
     "# Read the data into a Pandas DataFrame\n",
     "crowdfunding_info_df = pd.read_excel('Resources/crowdfunding.xlsx')\n",
-    "crowdfunding_info_df.head()"
+    "crowdfunding_info_df.head()\n"
    ]
   },
   {
@@ -2451,7 +2451,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
